Fix issue with padding left and right in area-covered section that was removed when setting padding-bottom to 0 in previous commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,7 +348,8 @@ footer p {
 
 #area-covered {
     clear: both;
-    padding-top: 2.8rem;
+    padding: 2.8rem;
+    padding-bottom: 0;
 }
 
 #area-covered iframe {
